--- a/config.json
+++ b/config.json
@@ -1,3 +1,16 @@
+
 {
-    "token": "NzU5MjE2NDE4MjY0NDQ5MDM0.X26RYw.TrwOJda5QN623sphcgwIgd_pZbI"
+    "token": "NjQ5NzkxOTk3OTYzNDAzMjc3.XeB79A.OLQYn-ooHd4a352lpn9w3rh0T2o",
+
+    "prefix": ">",
+
+    "actionchannel": "846504646779994113",
+
+    "adminrole": "Developer",
+
+    "highlightchannel": "846762055138148362",
+
+    "member": "848291409484185612",
+
+    "welcomechannel": "848291689314779166"
 }
