--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 
 {
-    "token": "NjQ5NzkxOTk3OTYzNDAzMjc3.XeB79A.OLQYn-ooHd4a352lpn9w3rh0T2o",
+    "token": "NzU5MjE2NDE4MjY0NDQ5MDM0.X26RYw.TrwOJda5QN623sphcgwIgd_pZbI",
 
     "prefix": ">",
 
@@ -10,7 +10,4 @@
 
     "highlightchannel": "846762055138148362",
 
-    "member": "848291409484185612",
-
-    "welcomechannel": "848291689314779166"
 }
